--- a/app/src/main/res/layout/reminders.xml
+++ b/app/src/main/res/layout/reminders.xml
@@ -13,17 +13,27 @@
     android:gravity="center_horizontal"
     android:padding="@dimen/general_padding">
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/logo"
-        android:layout_centerInParent="true"
-        android:contentDescription="@string/app_logo"/>
-
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/reminders_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/reminders"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+
+<!--    <ImageView-->
+<!--        android:layout_width="150dp"-->
+<!--        android:layout_height="150dp"-->
+<!--        android:src="@drawable/logo"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:contentDescription="@string/app_logo"/>-->
+
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/reminders"/>-->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_reminder"
